--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch-scss": "node-sass --watch public/scss --output-style=expanded scss/main.scss -o public/css/",
-    "local": "node server/server.js",
+    "local": "node server.js",
     "start": "concurrently \"npm run local\" \"npm run watch-scss\""
   },
   "keywords": [],
@@ -16,6 +16,8 @@
     "concurrently": "^3.5.1",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
-    "node-sass": "^4.7.2"
+    "http": "0.0.0",
+    "node-sass": "^4.7.2",
+    "ws": "^5.1.0"
   }
 }
