--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "mongodb": "^3.0.4",
     "node-sass": "^4.7.2",
     "ws": "^5.1.0"
   }
