--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http": "0.0.0",
     "mongodb": "^3.0.4",
     "node-sass": "^4.7.2",
-    "ws": "^5.1.0"
+    "uuid-v4": "^0.1.0",
+    "ws": "5.1.0"
   }
 }
