--- a/websocket-server/package.json
+++ b/websocket-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "4.16.3",
     "uuid-v4": "^0.1.0",
-    "ws": "5.1.0"
+    "ws": "5.1.0",
+    "wstunnel": "^1.2.5"
   }
 }
